# beardpilot

./: Cargo.toml  README.md
beardpilot/: Cargo.toml
beardpilot-api/: Cargo.toml
beardpilot-api/examples/: simple-chat-mistral.rs  simple-chat.rs  simple-tool.rs  stream-chat.rs
beardpilot-api/src/: client.rs  endpoint.rs  error.rs  lib.rs  ollama.rs
beardpilot-api/src/client/: mistral.rs  ollama.rs
beardpilot-api/src/endpoint/: chat.rs  embed.rs  generate.rs  model.rs  tag.rs  tool.rs  version.rs
beardpilot/src/: app.rs  chat.rs  config.rs  error.rs  event.rs  main.rs  tools.rs
beardpilot/src/chat/: conversation.rs  session.rs  tool_registry.rs
beardpilot/src/tools/: bash.rs  find.rs  list_files.rs  read.rs
beardpilot/src/ui/: tui.rs
src/: app.rs  chat.rs  config.rs  error.rs  event.rs  main.rs  tools.rs
src/chat/: conversation.rs  session.rs
src/tools/: bash.rs  find.rs  list_files.rs  read.rs
src/ui/: input.rs  tui.rs
