[package]
name = "beardpilot-api"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = "0.3.32"
log = "0.4"
reqwest = { version = "0.13", features = ["json"] }
schemars = "1.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.18"
url = "2"

[features]
stream = ["reqwest/stream"]
