[package]
name = "beardpilot"
version = "0.1.0"
edition = "2021"

[dependencies]
beardpilot-api = { path = "../beardpilot-api", features = ["stream"] }
thiserror = "2.0.18"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.51.0", features = ["full"] }
tokio-stream = { version = "0.1.18", features = ["io-util"] }
toml = "0.8"
dirs = "5"
schemars = "1.2.1"
ratatui = "0.30.0"
crossterm = { version = "0.28", features = ["event-stream"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
futures-util = "0.3.32"
